refactor: 백엔드 MVP 데이터·통신 계약 정리